--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,8 +32,8 @@
   
     <title>Happening - Find your experience of a lifetime</title>
   </head>
-  <body>
+  <body style="height: 100vh">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="app"></div>
+    <div id="app" style="height: 100vh"></div>
   </body>
 </html>
